[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["iritmaximus <aaro.koivukangas@gmail.com>"]
readme = "README.md"


[tool.poe.tasks]
test = "coverage run --branch -m pytest src"
testhtml = "coverage html"
openhtml = "firefox htmlcov/index.html"
test_full = ["test", "testhtml"]
test_full_open = ["test", "testhtml", "openhtml"]
lint = "pylint src"
build = ["test", "testhtml", "lint"]


[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.0"
black = "^23.1.0"
poethepoet = "^0.19.0"


[tool.poetry.group.test.dependencies]
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
