[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["iritmaximus <aaro.koivukangas@gmail.com>"]
readme = "README.md"


[tool.poe.tasks]
start = "uvicorn src.api:app"
dev = "uvicorn src.api:app --reload"
database = "docker-compose up"
database-remove = "docker-compose down --volumes"
testhtml = "coverage html"
openhtml = "firefox htmlcov/index.html"
openhtml-bin = "firefox-bin htmlcov/index.html"
test_full = ["test", "testhtml"]
test_full_open = ["test", "testhtml", "openhtml"]
format = "black src"
coverage-report = ["testhtml"]
lint = "pylint src"
build = ["test", "testhtml", "format", "lint"]

[tool.poe.tasks.test]
env = {"ENV" = "test"}
cmd = "coverage run --branch -m pytest src --timeout=5"



[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
sqlalchemy = "^2.0.9"
fastapi = {extras = ["all"], version = "^0.95.1"}
pyrogram = "^2.0.104"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.1.0"
poethepoet = "^0.19.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.test.dependencies]
coverage = "^7.2.2"
pytest = "^7.2.2"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
